@@ -11,6 +11,7 @@ binary release:
 documentation
 ----------------------
 * Add more explaination to ldapmapper (CC-870). Patch by Florian Rosenauer
+* Add missing docs for command-line options log4jconfig, jettyxml, agentutil. Reported by David Williams
 
 build loop
 ======================
